--- a/services/web/frontend/index.html
+++ b/services/web/frontend/index.html
@@ -23,16 +23,22 @@
     </style>
   </head>
   <body>
+    <!-- Controls + status -->
     <form id="upload-form">
       <input id="file-input" type="file" accept=".ply" />
       <button id="upload-btn">Upload &amp; View PLY</button>
-      <pre id="status"></pre>
-      <div id="viewer-container"></div> <!-- used by viewer.js -->      
-    </form>    
+    </form>
 
     <pre id="status"></pre>
     <div id="viewer-container"></div>
 
+    <!-- Three.js and helpers (globals for viewer.js) -->
+    <script src="https://unpkg.com/three@0.157.0/build/three.min.js"></script>
+    <script src="https://unpkg.com/three@0.157.0/examples/js/controls/OrbitControls.js"></script>
+    <script src="https://unpkg.com/three@0.157.0/examples/js/loaders/PLYLoader.js"></script>
+    <script src="https://unpkg.com/three@0.157.0/examples/js/loaders/GLTFLoader.js"></script>
+
+    <!-- Vite entry -->
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
