--- a/services/web/static/index.html
+++ b/services/web/static/index.html
@@ -188,6 +188,6 @@
       </section>
     </main>
 
-    <script src="/static/js/landing.js"></script>
+    <script src="/js/landing.js"></script>
   </body>
 </html>
